syntax = "proto3";

package com.gojek.beast;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "com.gojek.beast";
option java_outer_classname = "TestMessageProto";
option go_package = "github.com/gojekfarm/beast/proto";

message TestKey {
    string order_number = 1;
    string order_url = 2;
}

message TestMessage {
    string order_number = 1;
    string order_url = 2;
    string order_details = 3;
    google.protobuf.Timestamp created_at = 4;
    com.gojek.beast.Status status = 5;
    int64 discount = 6;
    bool success = 7;
    float price = 8;
    map<string, string> current_state = 9;
    bytes user_token = 10;
    google.protobuf.Duration trip_duration = 11;
    repeated string aliases = 12;
    google.protobuf.Struct properties = 13;
}

message TestNestedMessage {
    string nested_id = 1;
    TestMessage single_message = 2;
}

message TestNestedRepeatedMessage {
    TestMessage single_message = 1;
    repeated TestMessage repeated_message = 2;
    int32 number_field = 3;
    repeated int32 repeated_number_field = 4;
}

enum Status {
    COMPLETED = 0;
    CANCELLED = 1;
}
